fix: scrollbar for access questions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,13 +214,13 @@ body {
 
 .scroll-box::-webkit-scrollbar {
   height: 2px;
-  width: 2px;
+  width: 1px;
   border-radius: 2px;
-  background-color: rgba(119, 119, 119, .23);
+  background-color: rgba(55, 55, 55, .23);
 }
 
 .scroll-box::-webkit-scrollbar-thumb {
-  background-color: #373737;
+  background-color: #686868;
   border-radius: 2px;
 }
 
